[package]
name = "gnome-who"
version = "0.1.0"
authors = ["Xidorn Quan <me@upsuper.org>"]
edition = "2021"
license = "GPL-3.0-or-later"
publish = false
exclude = ["screenshot.png"]

[dependencies]
anyhow = "1.0.26"
futures-channel = "0.3"
futures-util = "0.3"
glib = "0.18"
gtk = "0.18"
inotify = { version = "0.10", default-features = false }
libappindicator = "0.9"
libc = "0.2.86"
mio = { version = "0.8", features = ["os-poll"] }
mio-pidfd = "0.3.0"
nix = { version = "0.27", features = ["signal"] }
once_cell = "1.3.1"
tempfile = "3.1.0"
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
utmp-rs = "0.3"
